# road_accident_analysis-EDUCATIONAL

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  WORKFLOW ATTENDU  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  github-actions-backend.yml  release.yml  test.yml
CI-CD/: COMPARATIF_OUTILS.md  PROBLEMES_DETECTES.md  VEILLE_CICD.md
CI-CD/docs/source/: CHANGELOG.md  CHANGELOG.rst
ML/: 2-data-segmentation.ipynb  3-a-accident-initial-ml-training.ipynb  3-b-fine-tuning.ipynb  4-a-passengers-ml-training.ipynb  4-b-fine-tuning-passengers.ipynb  Choix.md  Graphiques.md  __init__.py  ml_config.py  requirements.txt
ML/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
ML/catboost_info/learn/: events.out.tfevents
ML/data/output/: dataset_accident.parquet  dataset_passager_pieton.csv  dataset_passager_pieton.parquet  dataset_passager_poids_lourd.csv  dataset_passager_poids_lourd.parquet  dataset_passager_vehicule_leger.parquet  dataset_passager_velo_edp.csv  dataset_passager_velo_edp.parquet  dataset_passager_voiture.parquet
ML/functions/: __init__.py  display_metrics.py  hyperopt_tuning.py  model_selection.py
ML/models/: features_accident.joblib  features_passager_pieton.joblib  features_passager_velo_edp.joblib  features_passager_voiture.joblib  model_accident_binary.joblib  model_passager_global.joblib  model_passager_pieton.joblib  model_passager_poids_lourd.joblib  model_passager_vehicule_leger.joblib  model_passager_velo_edp.joblib  model_passager_voiture.joblib  results_acc_bin_baseline.pkl  results_passager_comparison.joblib
Rendu/: README.md  docker-compose.yml
Rendu/CI-CD/: VEILLE_CICD.md
Rendu/CI-CD/docs/source/: CHANGELOG.rst
Rendu/ML/: ml_config.py
Rendu/ML/data/output/: dataset_passager_velo_edp.csv
Rendu/ML/models/: features_passager_global.joblib
Rendu/backend/: README.md
Rendu/front/: pyproject.toml
Rendu/front/components/: __init__.py
Rendu/front/styles/: theme.py
backend/: .coverage  .env.example  Dockerfile  README.md  database.py  features.py  main.py  model.py  models_db.py  pyproject.toml  schemas.py
backend/controllers/: health.py  prediction.py
backend/ml_models/: model_accident_binary_optimized.joblib
backend/models/: model_accident_binary_optimized.joblib
backend/schemas/: __init__.py  prediction.py
backend/services/: ml_service.py  prediction_service.py
backend/tests/: conftest.py  test_features.py  test_model.py  test_routes.py  test_schemas.py
front/: Dockerfile  README.md  app.py  pyproject.toml
front/components/: __init__.py  charts.py  form.py  result.py
front/controllers/: prediction.py
front/models/: __init__.py  constants.py  form_data.py
front/services/: api_service.py
front/styles/: __init__.py  theme.py
front/views/: __init__.py  charts.py  form.py
